2011-09-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Fix webkit2 unit tests in debug builds
        https://bugs.webkit.org/show_bug.cgi?id=69006

        Reviewed by Martin Robinson.

        We are currently using the WorQueue name as thread name which in
        this moment can be com.apple.WebKit.ProcessLauncher or
        com.apple.CoreIPC.ReceiveQueue. Both names are longer than 31
        characters which is the limit of Visual Studio for thread
        names. When log is enabled createThread() will assert instead of
        truncate the name, so we need to make sure we don't use a name
        longer than 31 characters.

        * Platform/gtk/WorkQueueGtk.cpp:
        (WorkQueue::platformInitialize):

2011-09-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Loader client implementation for WebKit2 GTK+ API
        https://bugs.webkit.org/show_bug.cgi?id=68085

        Reviewed by Martin Robinson.

        Adds a new object, WebKitWebLoaderClient, that emits signals for
        every page loader callback.

        * GNUmakefile.am: Add new files to compilation.
        * UIProcess/API/gtk/WebKitWebLoaderClient.cpp: Added.
        (didStartProvisionalLoadForFrame):
        (didReceiveServerRedirectForProvisionalLoadForFrame):
        (didFailProvisionalLoadWithErrorForFrame):
        (didCommitLoadForFrame):
        (didFinishLoadForFrame):
        (didFailLoadWithErrorForFrame):
        (webkitWebLoaderClientConstructed):
        (webkitWebLoaderClientSetProperty):
        (webkitWebLoaderClientGetProperty):
        (webkit_web_loader_client_init):
        (webkit_web_loader_client_class_init):
        * UIProcess/API/gtk/WebKitWebLoaderClient.h: Added.
        * UIProcess/API/gtk/WebKitWebView.cpp:
        (webkitWebViewConstructed): Create the loader client for the view.
        (webkit_web_view_init):
        (webkit_web_view_get_loader_client): Get the current loader client.