@@ -1,3 +1,9 @@
+2011-09-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.com>
+
+        Try to fix GTK+ build.
+
+        * GNUmakefile.am:
+
 2011-09-28  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Fix webkit2 unit tests in debug builds
